# Internship-Pipeline

./: .gitignore  ARCHITECTURE.md  LICENSE  MCP_SETUP.md  README.md  ROADMAP.md  VISION.md  claude_desktop_config.json.example  login_helper.py  pyproject.toml
aggregator-jobspy/jobspy/naukri/: __init__.py
config/: .env.example
data/profile/: profile.example.yaml
piperline/: __init__.py  cli.py  config.py  store.py
piperline/aggregator/: __init__.py  internshala.py  mapping.py  naukri_browser.py  service.py  unstop.py
piperline/automator/: __init__.py  answers.py  apply.py  ats.py  human.py  stealth.py
piperline/common/: __init__.py  models.py  profile.py
piperline/llm/: __init__.py
piperline/matcher/: __init__.py  enrich.py  github.py  letters.py  scorer.py  tailor.py
piperline/matcher_mcp/: __init__.py  server.py
piperline/orchestrator/: __init__.py  dashboard.py  pipeline.py
piperline/outreach/: __init__.py  discovery.py  sender.py
piperline/render/: __init__.py  resume.py
piperline/render/templates/: resume.html.j2
tests/: test_automator.py  test_autopilot.py  test_github.py  test_mapping.py  test_matcher.py  test_outreach.py  test_pipeline.py
